k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supernova-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /memory
        pathType: Prefix
        backend:
          service:
            name: memory-service
            port:
              name: http # <--- Change 'number: 8000' to 'name: http'
